# urVision

./: CMakeLists.txt  README.md  package.xml
config/: common.yaml  csi_cam_0.yaml  default.yaml  opencv_camera_properties.yaml  tracker.yaml  urvision_test_image.yaml  vision.yaml  vision_test.yaml
include/: PlantDetect.h  PlantDetector.h  PlantFilter.h  PlantTracker.h  SpatialMapper.h
include/urVision/: Algorithm.hpp  ObjectTracker.h  RosPackageTemplate.hpp
launch/: rpi_cam.launch  tracker.launch  urVision.launch  urVision_overlying_params.launch  urVision_test.launch  urVision_test_image.launch  urVision_with_cam.launch
msg/: WeedPair.msg  weedData.msg  weedDataArray.msg
src/: Algorithm.cpp  ImageConverter.cpp  ObjectTracker.cpp  PlantDetect.cpp  PlantDetector.cpp  PlantFilter.cpp  PlantTracker.cpp  RosPackageTemplate.cpp  SpatialMapper.cpp  cv_main_windows.cpp  test_image_publisher_node.cpp  tracker_node.cpp  urVision_node.cpp
srv/: ClearTracker.srv  QueryWeeds.srv
test/: AlgorithmTest.cpp  ObjectTrackerTest.cpp
windows_projects/rowDetect/: rowDetect.sln
windows_projects/rowDetect/opencvTest1/: opencvTest1.vcxproj  opencvTest1.vcxproj.filters  rowDetect.cpp
